test/errmsg/field-desig-for-array.c
// field-desig-for-array.c
// Applying a field designator to an array.

int arr2[2] = { .x = 1 };

// EOF
